--- a/ben_awad-typescript_react/package.json
+++ b/ben_awad-typescript_react/package.json
@@ -11,6 +11,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "styled-components": "^5.1.1",
     "tslint": "^6.1.2",
     "typescript": "~3.7.2"
   },
@@ -37,6 +38,7 @@
   },
   "devDependencies": {
     "@types/react": "^16.9.35",
-    "@types/react-dom": "^16.9.8"
+    "@types/react-dom": "^16.9.8",
+    "@types/styled-components": "^5.1.0"
   }
 }
