--- a/ben_awad-typescript_react/package.json
+++ b/ben_awad-typescript_react/package.json
@@ -12,7 +12,9 @@
     "@types/reach__router": "^1.3.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
+    "redux": "^4.0.5",
     "styled-components": "^5.1.1",
     "tslint": "^6.1.2",
     "typescript": "~3.7.2"
@@ -41,6 +43,8 @@
   "devDependencies": {
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
-    "@types/styled-components": "^5.1.0"
+    "@types/react-redux": "^7.1.9",
+    "@types/styled-components": "^5.1.0",
+    "redux-devtools": "^3.5.0"
   }
 }
