--- a/typescript-practice/package.json
+++ b/typescript-practice/package.json
@@ -10,11 +10,15 @@
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/reach__router": "^1.3.5",
+    "@types/redux": "^3.6.0",
+    "@types/redux-thunk": "^2.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^5.1.1",
     "tslint": "^6.1.2",
     "typescript": "~3.7.2"
