--- a/typescript-practice/package.json
+++ b/typescript-practice/package.json
@@ -12,6 +12,7 @@
     "@types/reach__router": "^1.3.5",
     "@types/redux": "^3.6.0",
     "@types/redux-thunk": "^2.1.0",
+    "axios": "^0.19.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
