--- a/typescript-practice/package.json
+++ b/typescript-practice/package.json
@@ -11,6 +11,7 @@
     "@types/lodash": "^4.14.157",
     "@types/node": "^12.0.0",
     "@types/reach__router": "^1.3.5",
+    "@types/react-paginate": "^6.2.1",
     "@types/react-router-dom": "^5.1.5",
     "@types/redux": "^3.6.0",
     "@types/redux-thunk": "^2.1.0",
@@ -18,6 +19,7 @@
     "lodash": "^4.17.15",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-paginate": "^6.3.2",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
