--- a/typescript-practice/package.json
+++ b/typescript-practice/package.json
@@ -28,7 +28,8 @@
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.1.1",
     "tslint": "^6.1.2",
-    "typescript": "~3.7.2"
+    "typescript": "~3.7.2",
+    "uuid": "^8.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -56,6 +57,7 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.9",
     "@types/styled-components": "^5.1.0",
+    "@types/uuid": "^8.0.0",
     "redux-devtools": "^3.5.0"
   }
 }
